<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogUpdate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">



    <EditText
        android:id="@+id/titreEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez le titre"/>



    <EditText
        android:id="@+id/auteurEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez l'auteur"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Genre :"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/dateEditionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez la date d'édition"/>


    <EditText
        android:id="@+id/resumeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez le résumé"/>



    <EditText
        android:id="@+id/imageUrlEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez l'URL de l'image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/cancelButtonEdit"
            android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="Annuler"
        android:textColor="#ffffff"
        app:backgroundTint="#935d19" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Modifier"
        app:backgroundTint="#935d19"
        android:textColor="#ffffff"/>
    </LinearLayout>
</LinearLayout>
